fix dark mode btn footer

--- a/src/style.css
+++ b/src/style.css
@@ -2300,43 +2300,7 @@ nav .Navbar_destra .Navbar_main_buttons:hover {
 .Container-Footer-Latestbar-Left {
   display: flex;
   align-items: center;
-}
-.Container-Footer-Latestbar-Left .switch_elio {
-  width: 56px;
-  height: 32px;
-  margin-right: 2%;
-  display: flex;
-  align-items: center;
-  background-color: rgb(189, 194, 196);
-  border-radius: 24px;
-  box-shadow: rgba(74, 74, 104, 0.1) 0px 2px 2px -1px inset;
-  cursor: pointer;
-  transition: background-color 200ms ease 0s;
-  -webkit-box-align: center;
-}
-.Container-Footer-Latestbar-Left .switch_elio input {
-  width: 10px;
-  height: 10px;
-  cursor: pointer;
-  opacity: 0;
-  z-index: 3;
-  position: absolute;
-}
-.Container-Footer-Latestbar-Left .switch_elio .sole {
-  fill: rgb(252, 249, 72);
-  background-color: white;
-  border-radius: 100%;
-  box-shadow: rgba(0, 0, 0, 0.5);
-  width: 50%;
-  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s;
-}
-.Container-Footer-Latestbar-Left .switch_elio .sole:active {
-  border: 4px solid rgb(122, 110, 170);
-  transform: translateX(100%);
-  transition: transform 1s;
-}
-.Container-Footer-Latestbar-Left .switch_elio .sole .luna {
-  fill: white;
+  margin-left: 10px;
 }
 .Container-Footer-Latestbar-Left .language {
   height: 100%;
